Fixed text overflowing on mobile.

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ body, html
     padding-left: 35px;
     padding-right: 25px;
     padding-bottom: 10px;
+    overflow: hidden;
 }
 
 .header-container-1
@@ -280,6 +281,11 @@ body, html
     box-shadow: 0px 3px 3px rgb(204, 204, 204);
     padding: 30px 20px 20px 20px;
     border-left: 10px solid #facc15;
+}
+
+.main-item div
+{
+    overflow: hidden;
 }
 
 .main-item h4
